tests/constructor/wrong_arg_nb.rz
struct Foo {
    a: int
    b: int

    fn init(a: int, b: int) {
        self.a = a
        self.b = b
    }
}

var foo = Foo(1, 2, 3, 4) // error: wrong arguments number, expected 2 but found 4
var bar = Foo(1) // error: wrong arguments number, expected 2 but found 1